# backend

./: .dockerignore  .env.docker.example  .pre-commit-config.yaml  deploy.md  docker-compose.override.yml  docker-compose.yml  migrations.md  openapi.yaml  pyproject.toml
app/: app.py
app/core/: auth.py  crypt.py  database.py  di.py  exceptions.py  guards.py  schemas.py  settings.py  types.py
app/domains/games/: constants.py  models.py  routers.py  schemas.py  services.py
app/domains/leaderboard/: routers.py  schemas.py  services.py
app/domains/rooms/: constants.py  models.py  routers.py  schemas.py  services.py
app/domains/users/: models.py  routers.py  schemas.py  services.py
deploy/: docker-compose.infra.yml  docker-compose.observability.yml
deploy/docker/dev/: Dockerfile
deploy/docker/run/: Dockerfile
deploy/otel-collector/: config.yaml
migrations/: env.py
migrations/versions/: 14a56ef99557_rooms.py  83167fb4971e_fucking.py  eeb5acd4cce8_initial.py
