[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.4.5",
    "aiosqlite>=0.21.0",
    "litestar[jwt,standard]>=2.16.0",
    "passlib[argon2]>=1.7.4",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
]
